[project]
name = "pleiades-alkyone"
version = "0.1.0"
description = "Integration Test Suite for Project Pleiades"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11, <3.12"
authors = [
    {name = "Ahmad Saeed Zaidi"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "pleiades-atlas"
]

[tool.poetry]
name = "pleiades-alkyone"
version = "0.1.0"
description = "Integration Test Suite for Project Pleiades"
authors = ["Ahmad Saeed Zaidi"]
readme = "README.md"
license = "MIT"
packages = [{include = "alkyone", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pleiades-atlas = {path = "../atlas", develop = true}

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0,<25.0.0"
isort = ">=5.13.0,<6.0.0"
mypy = ">=1.8.0,<2.0.0"
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-env = ">=1.1.0,<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "pandas.*",
    "huggingface_hub.*",
    "atlas.*",
    "maia.*",
    "pytest.*",
    "pytest_asyncio.*",
    "pydantic.*",
    "pydantic_settings.*",
    "aiohttp.*",
    "psycopg.*",
    "psycopg_pool.*",
    "orjson.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
env = [
    "YOUTUBE_API_KEY_POOL_JSON=[\"test_key_1\"]",
    "COMPLIANCE_MODE=true",
    "VAULT_PROVIDER=huggingface",
    "HF_DATASET_ID=mock/dataset",
    "HF_TOKEN=mock_token",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
