[project]
name = "pleiades-atlas"
version = "0.2.1"
description = "Core Infrastructure Library for Pleiades Surveillance Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11, <3.12"
authors = [
    {name = "Ahmad Saeed Zaidi"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "psycopg[binary,pool]>=3.1.18,<4.0.0",
    "aiohttp>=3.9.3,<4.0.0",
    "orjson>=3.9.15,<4.0.0",
]

[project.optional-dependencies]
hf = [
    "huggingface-hub>=0.20.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=15.0.0,<16.0.0",
]
gcs = [
    "google-cloud-storage>=2.14.0,<3.0.0",
]
orchestration = [
    "prefect>=2.16.0,<3.0.0",
]
all = [
    "huggingface-hub>=0.20.0,<1.0.0",
    "google-cloud-storage>=2.14.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=15.0.0,<16.0.0",
    "prefect>=2.16.0,<3.0.0",
]

[project.scripts]
atlas = "atlas.__main__:main"

[tool.poetry]
name = "pleiades-atlas"
version = "0.2.1"
description = "Core Infrastructure Library for Pleiades Surveillance Platform"
authors = ["Ahmad Saeed Zaidi"]
readme = "README.md"
license = "MIT"
packages = [{include = "atlas", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0,<25.0.0"
isort = ">=5.13.0,<6.0.0"
mypy = ">=1.8.0,<2.0.0"
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-env = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "pandas.*",
    "huggingface_hub.*",
    "yt_dlp.*",
    "cv2.*",
    "youtube_transcript_api.*",
    "pydantic.*",
    "pydantic_settings.*",
    "aiohttp.*",
    "psycopg.*",
    "psycopg_pool.*",
    "orjson.*",
    "prefect.*",
    "tenacity.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
env = [
    "YOUTUBE_API_KEY_POOL_JSON=[]",
    "COMPLIANCE_MODE=false"
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]