[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maia"
version = "0.1.0"
description = "The Stateless Agent Layer for Project Pleiades - High-velocity video discovery and viral velocity monitoring"
requires-python = ">=3.11"
authors = [
    {name = "Ahmad Saeed Zaidi"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "prefect>=2.16.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",  # Retry logic for resilient network operations
    "opencv-python>=4.9.0",  # Painter: Frame extraction
    "yt-dlp>=2024.1.0",  # Video streaming and metadata
    "numpy>=1.26.0",  # Array processing for frames
    "youtube-transcript-api>=0.6.1",  # Scribe: Transcript fetching
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
maia-hunter = "maia.hunter:main"
maia-tracker = "maia.tracker:main"
maia-scribe = "maia.scribe:main"
maia-painter = "maia.painter:main"
maia-janitor = "maia.janitor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maia = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "unit: Unit tests (fast, mocked dependencies)",
    "integration: Integration tests (require live services)",
    "slow: Tests that take a long time to run",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

