[tool.poetry]
name = "pleiades-maia"
version = "0.1.0"
description = "The Stateless Agent Layer for Project Pleiades - High-velocity video discovery and viral velocity monitoring"
authors = ["Ahmad Saeed Zaidi"]
readme = "README.md"
license = "MIT"
packages = [{include = "maia", from = "src"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.16.0"
aiohttp = "^3.9.0"
tenacity = "^8.2.0"
opencv-python = "^4.9.0"
yt-dlp = "^2024.1.0"
numpy = "^1.26.0"
youtube-transcript-api = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
maia-hunter = "maia.hunter:main"
maia-tracker = "maia.tracker:main"
maia-scribe = "maia.scribe:main"
maia-painter = "maia.painter:main"
maia-janitor = "maia.janitor:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "pandas.*",
    "huggingface_hub.*",
    "yt_dlp.*",
    "cv2.*",
    "youtube_transcript_api.*",
    "prefect.*",
    "tenacity.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "unit: Unit tests (fast, mocked dependencies)",
    "integration: Integration tests (require live services)",
    "slow: Tests that take a long time to run",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

