[project]
name = "pleiades-maia"
version = "0.1.0"
description = "The Stateless Agent Layer for Project Pleiades - High-velocity video discovery and viral velocity monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11, <3.12"
authors = [
    {name = "Ahmad Saeed Zaidi"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "prefect>=2.16.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "tenacity>=8.2.0,<9.0.0",
    "opencv-python>=4.9.0,<5.0.0",
    "yt-dlp>=2024.1.0,<2025.0.0",
    "numpy>=1.26.0,<2.0.0",
    "youtube-transcript-api>=0.6.1,<1.0.0",
]

[project.scripts]
maia-hunter = "maia.hunter:main"
maia-tracker = "maia.tracker:main"
maia-scribe = "maia.scribe:main"
maia-painter = "maia.painter:main"
maia-janitor = "maia.janitor:main"

[tool.poetry]
name = "pleiades-maia"
version = "0.1.0"
description = "The Stateless Agent Layer for Project Pleiades - High-velocity video discovery and viral velocity monitoring"
authors = ["Ahmad Saeed Zaidi"]
readme = "README.md"
license = "MIT"
packages = [{include = "maia", from = "src"}]

[tool.poetry.dependencies]
pleiades-atlas = {path = "../atlas", develop = true}

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0,<25.0.0"
isort = ">=5.13.0,<6.0.0"
mypy = ">=1.8.0,<2.0.0"
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-env = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "pandas.*",
    "huggingface_hub.*",
    "yt_dlp.*",
    "cv2.*",
    "youtube_transcript_api.*",
    "prefect.*",
    "tenacity.*",
    "psycopg.*",
    "psycopg_pool.*",
    "orjson.*",
    "atlas.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
env = [
    "YOUTUBE_API_KEY_POOL_JSON=[\"test_key_1\"]",
    "COMPLIANCE_MODE=true",
    "VAULT_PROVIDER=huggingface",
    "HF_DATASET_ID=mock/dataset",
    "HF_TOKEN=mock_token",
]
markers = [
    "unit: Unit tests (fast, mocked dependencies)",
    "integration: Integration tests (require live services)",
    "slow: Tests that take a long time to run",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

