[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-ml-api"
version = "1.0.0"
description = "YouTube ML Microservice API for ViralVelocity"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "scikit-learn",
    "xgboost",
    "numpy",
    "joblib",
    "python-multipart",
    "requests",
    "httpx"
]

[tool.ruff]
# Exclude common cache directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]

# Match Black's line length
line-length = 88
indent-width = 4

# Target Python 3.10 (HF Spaces default)
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (F) and pycodestyle (E, W)
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]