[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-ml-api"
version = "1.0.0"
description = "YouTube ML Microservice API for ViralVelocity"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "scikit-learn",
    "xgboost",
    "numpy",
    "joblib",
    "pandas",
    "python-dotenv"
]

[tool.ruff]
# Exclude common cache directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]

# Match Black's line length
line-length = 88
indent-width = 4

# Target Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E), and isort (I)
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]